# Monetto

./: .gitignore  README.md  alembic.ini  depencieas.txt  package-lock.json  pyproject.toml  repair-node-path.cmd  start-backend.cmd  start-dev.cmd  start-frontend.cmd
alembic/: env.py
alembic/versions/: 20260511_0001_initial_schema.py  20260511_0002_category_order_and_defaults.py
app/: __init__.py  main.py
app/api/: dependencies.py  router.py
app/config/: security.py  settings.py
app/db/: session.py  types.py
app/dto/: __init__.py  auth_dto.py  base_dto.py  budget_dto.py  category_dto.py  dashboard_dto.py  message_dto.py  report_dto.py  transaction_dto.py  user_dto.py
app/exceptions/: __init__.py  domain.py  handlers.py
app/mappers/: __init__.py  budget_mapper.py  category_mapper.py  transaction_mapper.py  user_mapper.py
app/models/: __init__.py  budget.py  category.py  enums.py  transaction.py  user.py
app/repositories/: __init__.py  base_repository.py  budget_repository.py  category_repository.py  dashboard_repository.py  transaction_repository.py  user_repository.py
app/services/: __init__.py  auth_service.py  budget_service.py  category_service.py  dashboard_service.py  health_service.py  report_service.py  transaction_service.py
app/utils/: dates.py  default_categories.py  money.py
docs/: auth-testing.md  monetto-api.postman_collection.json  routes-map.json
monettoF/: .gitignore  guiaF.md  index.html  package-lock.json  package.json
scripts/: common.ps1  repair-node-path.ps1  start-backend.ps1  start-dev.ps1  start-frontend.ps1
tests/: conftest.py  test_dto_and_mappers.py
(+62 files in other folders)
